Next batch of updates before big refactor

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -2,3 +2,6 @@
 stdout_callback = yaml
 inventory = ./inventories/hosts.ini
 roles_path = ./roles
+
+[connection]
+ssh_agent = /home/vscode/.1password/agent.sock
