--- a/.devcontainer/fedora/Dockerfile
+++ b/.devcontainer/fedora/Dockerfile
@@ -20,6 +20,10 @@ RUN printf 'LANG=en_US.UTF-8\n' > /etc/locale.conf
 RUN python3 -m pip install --no-cache-dir --upgrade pip && \
     pip install ansible ansible-lint ansibug ansible-dev-tools
 
+RUN rpm --import https://downloads.1password.com/linux/keys/1password.asc
+RUN sh -c 'echo -e "[1password]\nname=1Password Stable Channel\nbaseurl=https://downloads.1password.com/linux/rpm/stable/\$basearch\nenabled=1\ngpgcheck=1\nrepo_gpgcheck=1\ngpgkey=\"https://downloads.1password.com/linux/keys/1password.asc\"" > /etc/yum.repos.d/1password.repo'
+RUN dnf check-update -y 1password-cli && dnf install -y 1password-cli
+
 USER ${USERNAME}
 
 CMD ["zsh"]
