--- a/ansible/roles/proxmox/tasks/main.yml
+++ b/ansible/roles/proxmox/tasks/main.yml
@@ -10,3 +10,5 @@
   ansible.builtin.import_tasks: control-plane-1-create.yml
 - name: Create additional control-plane VMs
   ansible.builtin.import_tasks: control-planes-2-3-create-join.yml
+- name: Create worker VMs
+  ansible.builtin.import_tasks: workers-create.yml
