CoreOS roles work correctly

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -2,6 +2,7 @@
 stdout_callback = yaml
 inventory = ./inventories/hosts.ini
 roles_path = ./roles
+playbook_dir = ./playbooks
 
-[connection]
-ssh_agent = /home/vscode/.1password/agent.sock
+# [connection]
+# ssh_agent = ~/.1password/agent.sock
