Add for pipewire graph

--- a/ansible/roles/audio_tools_install/tasks/main.yml
+++ b/ansible/roles/audio_tools_install/tasks/main.yml
@@ -6,6 +6,7 @@
       - pipewire-alsa
       - pipewire-pulseaudio
       - pipewire-utils
+      - qpwgraph
       # Session manager
       - wireplumber
       # ALSA + Pulse CLIs (for MIDI/audio troubleshooting)
