Get inventories and vars more organized

--- a/ansible/inventories/hosts.yml
+++ b/ansible/inventories/hosts.yml
@@ -1,3 +1,4 @@
+# ansible/inventories/hosts.yml
 all:
   children:
     local:
@@ -16,45 +17,49 @@ all:
     proxmox:
       hosts:
         coachlight-homelab-1:
-          ansible_host: 192.168.226.90
+          lan_ip: 192.168.226.90
         coachlight-homelab-2:
-          ansible_host: 192.168.226.91
+          lan_ip: 192.168.226.91
         coachlight-homelab-3:
-          ansible_host: 192.168.226.92
+          lan_ip: 192.168.226.92
 
     k3s_control_plane:
       hosts:
         k3s-cp-1:
-          ansible_host: 192.168.226.93
+          lan_ip: 192.168.226.93
         k3s-cp-2:
-          ansible_host: 192.168.226.94
+          lan_ip: 192.168.226.94
         k3s-cp-3:
-          ansible_host: 192.168.226.95
+          lan_ip: 192.168.226.95
 
     k3s_workers:
       hosts:
         k3s-wkr-1:
-          ansible_host: 192.168.226.96
+          lan_ip: 192.168.226.96
         k3s-wkr-2:
-          ansible_host: 192.168.226.97
+          lan_ip: 192.168.226.97
         k3s-media-wkr-3:
-          ansible_host: 192.168.226.98
+          lan_ip: 192.168.226.98
 
-    fedora_vms:
+    k3s_cluster:
       children:
         k3s_control_plane: {}
         k3s_workers: {}
 
-    # This is the "cluster meta-group"
-    k3s_on_proxmox:
+    proxmox_cluster:
       children:
         local: {}
         proxmox: {}
-        fedora_vms: {}
+        k3s_cluster: {}
 
-    # Everything in your homelab, including random desktops
+    synology_nas:
+      hosts:
+        srfaudio:
+          lan_ip: 192.168.226.6
+          ts_ip: 100.64.218.83
+
     coachlight_homelab:
       children:
-        k3s_on_proxmox: {}
+        proxmox_cluster: {}
         desktops: {}
         laptops: {}
