--- a/ansible/inventories/group_vars/all.yml
+++ b/ansible/inventories/group_vars/all.yml
@@ -1,4 +1,19 @@
+# ansible/inventories/group_vars/all.yml
 ansible_become_pass: "{{ lookup('community.general.onepassword', 'ydeuaeonuaoyhbvrg5d3pq4rgq', field='password', vault='HomeLab') }}"
 ansible_user: sfroeber
 ansible_ssh_private_key_file: "~/.ssh/coachlight-homelab.pem"
 ansible_ssh_common_args: "-o IdentitiesOnly=yes -o StrictHostKeyChecking=accept-new"
+
+connection_preference: tailnet
+
+ansible_host: >-
+  {{
+    (
+      connection_preference == 'tailnet'
+      and (ts_ip | default('') | length > 0)
+    )
+    | ternary(
+        ts_ip | default(lan_ip),
+        lan_ip | default(ts_ip)
+      )
+  }}
