--- a/ansible/inventories/group_vars/k3s_cluster.yml
+++ b/ansible/inventories/group_vars/k3s_cluster.yml
@@ -1,3 +1,4 @@
+# ansible/inventories/group_vars/k3s_on_proxmox.yml
 proxmox_fcos_stream: stable
 proxmox_fcos_download_dir: ~/Downloads/fcos
 proxmox_fcos_variant: fcos
