--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
 stdout_callback = yaml
-inventory = ./inventories/hosts.ini
+force_color = true
+inventory = ./inventories/hosts.yml
 roles_path = ./roles
 playbook_dir = ./playbooks
 
