--- a/ansible/roles/control_host_dependencies/meta/argument_specs.yml
+++ b/ansible/roles/control_host_dependencies/meta/argument_specs.yml
@@ -1,18 +1,15 @@
 argument_specs:
   main:
-    short_description: Ensure controller-local dependencies are present.
     options:
-      control_host_dependencies_python_executable:
-        type: str
-        required: false
-        default: "pip3"
-      control_host_dependencies_pip_packages:
-        type: list
-        elements: str
-        required: false
-        default: []
       control_host_dependencies_system_packages:
         type: list
         elements: str
-        required: false
         default: []
+      control_host_dependencies_pip_packages:
+        type: list
+        elements: str
+        default: []
+      control_host_dependencies_pip_executable:
+        type: str
+        required: false
+        description: Pip executable to use (e.g. pip3).
