--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-stdout_callback = yaml
+result_format = yaml
 force_color = true
 inventory = ./inventories/hosts.yml
 roles_path = ./roles
