--- a/ansible/roles/role_artifacts/tasks/main.yml
+++ b/ansible/roles/role_artifacts/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: Set dynamic role artifacts fact for {{ calling_role_name }}
   ansible.builtin.set_fact:
-    "{{ calling_role_name ~ '_artifacts' }}": "{{ calling_role_artifacts_inputs }}"
+    "{{ (calling_role_name | regex_replace('[^A-Za-z0-9_]', '_')) ~ '_artifacts' }}": "{{ calling_role_artifacts_inputs }}"
 
 - name: Ensure role artifacts directory exists for {{ calling_role_name }}
   ansible.builtin.file:
