--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
 result_format = yaml
+stdout_callback = yaml
 force_color = true
 inventory = ./inventories/hosts.yml
 roles_path = ./roles
