Everything works up to the copy command now.

--- a/ansible/playbooks/k3s-cluster-setup.yml
+++ b/ansible/playbooks/k3s-cluster-setup.yml
@@ -3,9 +3,9 @@
   gather_facts: false
 
   roles:
-    # - role: control_host_dependencies
-    # - role: coreos_cli_install
-    # - role: coreos_image_fetch
+    - role: control_host_dependencies
+    - role: coreos_cli_install
+    - role: coreos_image_fetch
     - role: ignition_renderer
       vars:
         ignition_renderer_cluster_layout: "{{ proxmox_cluster_layout }}"
