--- a/ansible/roles/coreos_cli_install/tasks/main.yml
+++ b/ansible/roles/coreos_cli_install/tasks/main.yml
@@ -1,4 +1,4 @@
-- name: Check for coreos-installer via cli_tester
+- name: Check for coreos-installer via cli_tester on {{ inventory_hostname }}
   ansible.builtin.include_role:
     name: cli_tester
   vars:
@@ -10,7 +10,7 @@
     filter:
       - ansible_os_family
 
-- name: Install coreos-installer when not present
+- name: Install coreos-installer when not present on {{ inventory_hostname }}
   when: not cli_tester_is_cli_installed | default(false)
   block:
     - name: Install coreos-installer on RedHat family
@@ -27,10 +27,10 @@
       become: true
       when: ansible_facts['os_family'] == 'Debian'
 
-    - name: Attempt to install coreos-installer on unsupported OS family
+    - name: Attempt to install coreos-installer on unsupported OS family {{ ansible_facts['os_family'] }}
       when: ansible_facts['os_family'] not in ['RedHat', 'Debian']
       block:
-        - name: Try installing coreos-installer via package manager
+        - name: Try installing coreos-installer via package manager on {{ inventory_hostname }}
           ansible.builtin.package:
             name: coreos-installer
             state: present
@@ -38,12 +38,12 @@
           failed_when: false
           register: coreos_cli_install_package_attempt
 
-        - name: Fail if coreos-installer installation attempt failed
+        - name: Fail when coreos-installer installation attempt failed on {{ inventory_hostname }}
           ansible.builtin.fail:
             msg: "Failed to install coreos-installer via package manager on unsupported OS family {{ ansible_facts['os_family'] }}."
           when: coreos_cli_install_package_attempt.rc != 0
 
-- name: Record coreos_cli_install role artifacts
+- name: Record coreos_cli_install role artifacts for {{ ansible_facts['os_family'] }}
   ansible.builtin.include_role:
     name: role_artifacts
   vars:
