--- a/ansible/roles/proxmox_vm_disk_manager/meta/tasks/main.yml
+++ b/ansible/roles/proxmox_vm_disk_manager/meta/tasks/main.yml
@@ -18,7 +18,7 @@
     fail_msg: Required proxmox_vm_disk_manager variables must be defined. Either api_password or api_token_id and api_token_secret must be provided.
   no_log: true
 
-- name: Build proxmox_vm_disk_manager effective parameters
+- name: Build proxmox_vm_disk_manager effective parameters for VM {{ proxmox_vm_disk_manager_vmid }} disk {{ proxmox_vm_disk_manager_disk }}
   ansible.builtin.set_fact:
     proxmox_vm_disk_manager_effective_params: >-
       {{
@@ -53,10 +53,11 @@
   community.proxmox.proxmox_disk: "{{ proxmox_vm_disk_manager_effective_params }}"
   register: proxmox_vm_disk_manager_result
 
-- name: Record proxmox_vm_disk_manager artifacts
+- name: Record proxmox_vm_disk_manager artifacts for VM {{ proxmox_vm_disk_manager_vmid }} disk {{ proxmox_vm_disk_manager_disk }}
   ansible.builtin.include_role:
     name: role_artifacts
   vars:
+    # noqa: var-naming
     calling_role_name: proxmox_vm_disk_manager
     calling_role_artifacts_inputs:
       proxmox_vm_disk_manager_effective_params: "{{ proxmox_vm_disk_manager_effective_params }}"
